--- a/index.html
+++ b/index.html
@@ -23,18 +23,36 @@
         </nav>
 
         <div class="banner">
-           <div class="banner-content">
-             <h1 class="banner-title">Brand New <br>
-                Group of Architects
-            </h1>
-            <p class="captions">There are many variations of passages of Lorem Ipsum available, but the majority have
-                suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-primary">Explore More</button>
-           </div>
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New <br>
+                    Group of Architects
+                </h1>
+                <p class="captions">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
             <img class="banner-img" src="/images/banner.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="teams display-flex">
+            <div class="teams-img-container">
+                <img src="/images/team1.png" alt="team image one">
+                <img src="/images/team2.png" alt="team image two">
+                <img src="/images/team3.png" alt="team image three">
+                <img src="/images/team4.png" alt="team image four">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-content"><span style="font-weight: 400;" class="quick text-light-gray">Quick list</span> <span style="font-weight: 700;" class="our">of Our</span> <span class="feat text-orange">Features</span></h3>
+                <p class="feature-describtion text-lighter-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                    <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+    </main>
     <footer></footer>
 
 </body>
