--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
     </header>
     <main>
+        <!-- 2nd page -->
         <section class="teams display-flex">
             <div class="teams-img-container">
                 <img src="/images/team1.png" alt="team image one">
@@ -44,16 +45,79 @@
                 <img src="/images/team4.png" alt="team image four">
             </div>
             <div class="our-features">
-                <h3 class="feature-content"><span style="font-weight: 400;" class="quick text-light-gray">Quick list</span> <span style="font-weight: 700;" class="our">of Our</span> <span class="feat text-orange">Features</span></h3>
-                <p class="feature-describtion text-lighter-gray">There are many variations of passages of Lorem Ipsum available, but the
+                <h3 class="feature-content"><span style="font-weight: 400;" class="quick text-light-gray">Quick
+                        list</span> <span style="font-weight: 700;" class="our">of Our</span> <span
+                        class="feat text-orange">Features</span></h3>
+                <p class="feature-describtion text-lighter-gray">There are many variations of passages of Lorem Ipsum
+                    available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
-                    <button class="btn-primary">Explore More</button>
+                <button class="btn-primary">Explore More</button>
             </div>
 
         </section>
+        <!-- 3rd page  -->
+        <section class="enjoy">
+            <h3></h3>
+        </section>
+
+        <!-- 4th page  -->
+        <section class="some-facts">
+            <div class="some">
+                <h3 style="font-weight: 600;    font-size:2.8rem ;">Some Facts</h3>
+                <p class="text-lighter-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration</p>
+            </div>
+            <div class="facts-content">
+                <!-- .facts-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="facts-card">
+                    <div><img src="/images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name text-lighter-gray">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="facts-card">
+                    <div><img src="/images/icons/projects.png " alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name text-lighter-gray">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="facts-card">
+                    <div><img src="/images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name text-lighter-gray">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="facts-card">
+                    <div> <img src="/images/icons/email.png " alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name text-lighter-gray">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsor">
+            <div class="random-info">
+                <h3>Our Sponspors</h3>
+                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.</p>
+                </div>
+                <div class="sponsor-list">
+                        <img src="/images/sponsors/spotify.png" alt="">
+                        <img src="/images/sponsors/amazon.png" alt="">
+                        <img src="/images/sponsors/google.png" alt="">                     
+                        <img src="/images/sponsors/figma.png" alt="">                                                           
+                        <img src="/images/sponsors/telerama.png" alt="">                 
+                </div>
+
+        </section>
+
     </main>
-    <footer></footer>
+    <footer class="bg-color">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 
 </body>
 
