--- a/index.html
+++ b/index.html
@@ -57,8 +57,44 @@
 
         </section>
         <!-- 3rd page  -->
-        <section class="enjoy">
-            <h3></h3>
+        <section class="enjoy display-flex">
+            <div class="love">
+                <h3 id="title-border" style="font-weight: 700;    font-size:2.8rem ;">Features you will <br> love &
+                    Enjoy</h3>
+                <p class=".text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even </p>
+
+                <!-- card  -->
+                <div class="feature-card">
+                    <h4 class="card-title" style="font-weight: 600; font-size: 1.25rem;">Dexktop & Mobile Version</h4>
+                    <p style="color: #727272; ">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="card-title" style="font-weight: 600; font-size: 1.25rem;">Drag & Drop Builder</h4>
+                    <p style="color: #727272; ">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="card-title" style="font-weight: 600; font-size: 1.25rem;">Awesome Modern Design</h4>
+                    <p style="color: #727272; ">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="card-title" style="font-weight: 600; font-size: 1.25rem;">Super Easy to Edit</h4>
+                    <p style="color: #727272; ">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div>
+                <img class="f-image" src="/images/architect.png" alt="">
+                <button id="badge" class="btn-primary">
+                    <span id="badge-year">10+Years</span><br>
+                    <Span>Experience</Span>
+                </button>
+            </div>
         </section>
 
         <!-- 4th page  -->
@@ -101,16 +137,16 @@
         <section class="sponsor">
             <div class="random-info">
                 <h3>Our Sponspors</h3>
-                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration.</p>
-                </div>
-                <div class="sponsor-list">
-                        <img src="/images/sponsors/spotify.png" alt="">
-                        <img src="/images/sponsors/amazon.png" alt="">
-                        <img src="/images/sponsors/google.png" alt="">                     
-                        <img src="/images/sponsors/figma.png" alt="">                                                           
-                        <img src="/images/sponsors/telerama.png" alt="">                 
-                </div>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="sponsor-list">
+                <img src="/images/sponsors/spotify.png" alt="">
+                <img src="/images/sponsors/amazon.png" alt="">
+                <img src="/images/sponsors/google.png" alt="">
+                <img src="/images/sponsors/figma.png" alt="">
+                <img src="/images/sponsors/telerama.png" alt="">
+            </div>
 
         </section>
 
