--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-            <img class="banner-img" src="/images/banner.png" alt="">
+            <img class="banner-img" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
         <!-- 2nd page -->
         <section class="teams display-flex">
             <div class="teams-img-container">
-                <img src="/images/team1.png" alt="team image one">
-                <img src="/images/team2.png" alt="team image two">
-                <img src="/images/team3.png" alt="team image three">
-                <img src="/images/team4.png" alt="team image four">
+                <img src="images/team1.png" alt="team image one">
+                <img src="images/team2.png" alt="team image two">
+                <img src="images/team3.png" alt="team image three">
+                <img src="images/team4.png" alt="team image four">
             </div>
             <div class="our-features">
                 <h3 class="feature-content"><span style="font-weight: 400;" class="quick text-light-gray">Quick
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div>
-                <img class="f-image" src="/images/architect.png" alt="">
+                <img class="f-image" src="images/architect.png" alt="">
                 <button id="badge" class="btn-primary">
                     <span id="badge-year">10+Years</span><br>
                     <Span>Experience</Span>
@@ -108,25 +108,25 @@
             <div class="facts-content">
                 <!-- .facts-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
                 <div class="facts-card">
-                    <div><img src="/images/icons/ribon.png" alt="" class="fact-icon">
+                    <div><img src="images/icons/ribon.png" alt="" class="fact-icon">
                         <h4 class="fact-number">54</h4>
                         <h5 class="fact-name text-lighter-gray">Awards Winnings</h5>
                     </div>
                 </div>
                 <div class="facts-card">
-                    <div><img src="/images/icons/projects.png " alt="" class="fact-icon">
+                    <div><img src="images/icons/projects.png " alt="" class="fact-icon">
                         <h4 class="fact-number">1458</h4>
                         <h5 class="fact-name text-lighter-gray">Project Finished</h5>
                     </div>
                 </div>
                 <div class="facts-card">
-                    <div><img src="/images/icons/customers.png" alt="" class="fact-icon">
+                    <div><img src="images/icons/customers.png" alt="" class="fact-icon">
                         <h4 class="fact-number">590</h4>
                         <h5 class="fact-name text-lighter-gray">Clients Worked</h5>
                     </div>
                 </div>
                 <div class="facts-card">
-                    <div> <img src="/images/icons/email.png " alt="" class="fact-icon">
+                    <div> <img src="images/icons/email.png " alt="" class="fact-icon">
                         <h4 class="fact-number">22578</h4>
                         <h5 class="fact-name text-lighter-gray">Email Send</h5>
                     </div>
@@ -141,11 +141,11 @@
                     alteration.</p>
             </div>
             <div class="sponsor-list">
-                <img src="/images/sponsors/spotify.png" alt="">
-                <img src="/images/sponsors/amazon.png" alt="">
-                <img src="/images/sponsors/google.png" alt="">
-                <img src="/images/sponsors/figma.png" alt="">
-                <img src="/images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
             </div>
 
         </section>
